fix: bind quiescing to suppressing the timed reconcile